tests/baselines/reference/parserWithStatement2.errors.txt
==== tests/cases/compiler/parserWithStatement2.ts (1 errors) ====
    with (1)
          ~
!!! parserWithStatement2.ts(1,7): error TS2135: All symbols within a with block will be resolved to 'any'.
      return;